# Relay

./: AUTHORS  INSTALL  README.md  meson.build
data/: com.github.raininja.relay.gschema.xml  relay.desktop
src/: Makefile.am  asset_bundle.xml  channel_tab.vala  connection.vala  irc.vala  main_entry.vala  main_window.vala  meson.build  message.vala  relay.vala  rich_text.vala  server_manager.vala  settings.vala  sqlclient.vala
